--- a/src/components/UI/repoItem/repoItem.sass
+++ b/src/components/UI/repoItem/repoItem.sass
@@ -2,6 +2,8 @@
   border: 1px solid lightgray
   padding: 1%
   margin-top: 1%
+  &:hover
+    transform: scale(105%)
   &-header
     display: flex
     justify-content: space-between
