--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -1,11 +1,12 @@
 @import "./variables"
-*
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-.container
-  display: flex
-  flex-direction: column
-  height: 100vh
-  margin: 0 auto
-  max-width: $max-width
+@import "~bootstrap/scss/bootstrap"
+//*
+//  margin: 0
+//  padding: 0
+//  box-sizing: border-box
+//.container
+//  display: flex
+//  flex-direction: column
+//  height: 100vh
+//  margin: 0 auto
+//  max-width: $max-width
